Andreas also added a workaround for borked meters with strange mfct fields (aPT and iWT)

Arthur van Dorp added the istahead driver. Thanks Arthur!

holigo1 fixed an izar driver issue for meters built 2000 or later. Thanks holigo1!

Michael Ott added w and wh units. Thanks Michael!

Roman Masse added a new mvt triplet detection for apator08 telegrams. Thanks Roman!

Fixed long standing confusion wether the DIF binary values are by
default signed or unsigned. It turns out that they are signed!
Thank you Mathias (Zeppelin500) and KaVauA for sorting this out!

For unknown VIFS and non-compliant meters the signedness
can be overriden to unsigned.

New improved address specification. E.g. use 12345678.M=KAM.V=1b.T=16
to listen to exactly the telegrams with id 12345678 manufacturer KAM,
version 0x1b and type 0x16. You if you do not specify any M,V or T, they
become wildcards which will be the old default behaviour.

If you receive multiple telegram versions from the same id, and you want to
filter out some versions, do: 12345678,!12345678.V=77

You can now specify p0 to p250, to read from an mbus using the primary address.
E.g. wmbusmeters --pollinterval=5s /dev/ttyUSB1:mbus:2400 TEMP piigth:mbus p0 NOKEY

Added option --identitymode=(id|id-mfct|full|none) to specify how
wmbusmeters groups meter state when receiving telegrams.

The default (which is the same as before) is to map state based only on id.
This usually works ok, however if you have two meters with the same id, but
from different manufacturers, you must separate their state with --identitymode=id-mfct
Full takes into account version and type as well. None means do not separate state
at all, used with wildcards and meters that do not need to keep state, ie all info
is in every telegram.

Version 1.16.1 2024-02-22

Fix docker file generation.

Version 1.16.0 2024-02-22

New build to trigger proper docker versioning.

Version 1.15.0 2024-02-14
Version 1.15.0-RC2 2024-02-14
