@@ -209,7 +209,7 @@ telegram=|2E4401069897969501167A4B0320052F2F_0413320C000003FD1700000044132109000
 
 # Test Sensostar 2 heat meter
 telegram=|9E44C5147956341200047A7B0090052F2F_046D25248A2B04063D1F000001FD17000415265F00004406131F0000840106901E0000C40106841E0000840206841E0000C402067A1E0000840306541E0000C40306021E00008404069E1D0000C40406D71C0000840506F21B0000C40506681A00008406061E190000C40606EB1700008407061C170000C40706EE1600002F2F2F2F2F2F2F2F2F2F2F2F2F2F2F2F|
-{"enegry_consumption_semi_monthly_10_kwh": 6760,"enegry_consumption_semi_monthly_11_kwh": 6430,"enegry_consumption_semi_monthly_12_kwh": 6123,"enegry_consumption_semi_monthly_13_kwh": 5916,"enegry_consumption_semi_monthly_14_kwh": 5870,"enegry_consumption_semi_monthly_1_kwh": 7824,"enegry_consumption_semi_monthly_2_kwh": 7812,"enegry_consumption_semi_monthly_3_kwh": 7812,"enegry_consumption_semi_monthly_4_kwh": 7802,"enegry_consumption_semi_monthly_5_kwh": 7764,"enegry_consumption_semi_monthly_6_kwh": 7682,"enegry_consumption_semi_monthly_7_kwh": 7582,"enegry_consumption_semi_monthly_8_kwh": 7383,"enegry_consumption_semi_monthly_9_kwh": 7154,"id": "12345679","media": "heat","meter": "sensostar","meter_datetime": "2020-11-10 04:37","name": "Heater","status": "OK","target_kwh": 7955,"timestamp": "1111-11-11T11:11:11Z","total_kwh": 7997,"total_water_m3": 2435.8}
+{"energy_consumption_semi_monthly_10_kwh": 6760,"energy_consumption_semi_monthly_11_kwh": 6430,"energy_consumption_semi_monthly_12_kwh": 6123,"energy_consumption_semi_monthly_13_kwh": 5916,"energy_consumption_semi_monthly_14_kwh": 5870,"energy_consumption_semi_monthly_1_kwh": 7824,"energy_consumption_semi_monthly_2_kwh": 7812,"energy_consumption_semi_monthly_3_kwh": 7812,"energy_consumption_semi_monthly_4_kwh": 7802,"energy_consumption_semi_monthly_5_kwh": 7764,"energy_consumption_semi_monthly_6_kwh": 7682,"energy_consumption_semi_monthly_7_kwh": 7582,"energy_consumption_semi_monthly_8_kwh": 7383,"energy_consumption_semi_monthly_9_kwh": 7154,"id": "12345679","media": "heat","meter": "sensostar","meter_datetime": "2020-11-10 04:37","name": "Heater","status": "OK","target_kwh": 7955,"timestamp": "1111-11-11T11:11:11Z","total_kwh": 7997,"total_water_m3": 2435.8}
 |Heater;12345679;OK;7997;2435.8;null;7955;1111-11-11 11:11.11
 
 # Test Elster V200H water meter
